tests/functional2/lang/dup-attrs/parse-fail-7.err.exp
error: attribute 'x' already defined at /pwd/in.nix:6:13
       at /pwd/in.nix:7:13:
            6|     inherit x;
            7|     inherit x;
             |             ^
            8|   };
